<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kapph.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.kapph.ui.favorites.FavoritesFragment"
        android:label="Favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.kapph.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.kapph.ui.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile"
        android:label="Profile" >
        <!-- ACTION TO NAVIGATE TO ORDER HISTORY -->
        <action
            android:id="@+id/action_profile_to_order_history"
            app:destination="@id/navigation_order_history" />
    </fragment>

    <!-- DESTINATION FOR ORDER HISTORY FRAGMENT -->
    <fragment
        android:id="@+id/navigation_order_history"
        android:name="com.example.kapph.ui.history.OrderHistoryFragment"
        android:label="Order History"
        tools:layout="@layout/fragment_order_history" />

    <fragment
        android:id="@+id/drawer_notifications"
        android:name="com.example.kapph.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/drawer_settings"
        android:name="com.example.kapph.SettingsFragment"
        android:label="Settings" />
</navigation>

    